--- a/frontend/src/app/shared/components/main-toolbar/main-toolbar.component.html
+++ b/frontend/src/app/shared/components/main-toolbar/main-toolbar.component.html
@@ -1,14 +1,14 @@
 <mat-toolbar color="primary">
-    <button mat-icon-button class="wardrobe-app-icon" aria-label="Wardrobe app icon-button with menu icon">
-        <mat-icon>menu</mat-icon>
+    <button mat-icon-button class="wardrobe-app-icon-button" aria-label="Wardrobe app icon-button with menu icon">
+        <img src="https://wardrobe-public.s3.eu-west-2.amazonaws.com/static-assets/wardrobe-logo.png"
+            alt="Wardrobe app icon" class="wardrobe-app-logo">
     </button>
-    <span>Wardrobe App</span>
-    <span class="wardrobe-app-spacer"></span>
-    <button mat-icon-button class="wardrobe-app-icon favorite-icon"
+    <span class="wardrobe-app-title">Wardrobe App</span>
+    <button mat-icon-button class="wardrobe-app-icon-button favorite-icon"
         aria-label="Wardrobe app icon-button with heart icon">
         <mat-icon>favorite</mat-icon>
     </button>
-    <button mat-icon-button class="wardrobe-app-icon" aria-label="Wardrobe-app icon-button with share icon">
+    <button mat-icon-button class="wardrobe-app-icon-button" aria-label="Wardrobe-app icon-button with share icon">
         <mat-icon>share</mat-icon>
     </button>
 </mat-toolbar>
