--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-main-toolbar></app-main-toolbar>
-<router-outlet></router-outlet>
+<app-main-toolbar id="app-primary-toolbar"></app-main-toolbar>
+<router-outlet *ngIf="isConnected; else notConnected"></router-outlet>
+<ng-template #notConnected>
+    <app-not-connected></app-not-connected>
+</ng-template>
