--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -11,3 +11,8 @@ body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+}
