--- a/frontend/src/app/views/wardrobe/wardrobe.component.html
+++ b/frontend/src/app/views/wardrobe/wardrobe.component.html
@@ -1,9 +1,9 @@
 <app-wardrobe-view-layout>
-    <div wardrobe-sidenav>
+    <div app-wardrobe-sidenav>
         <h3>My Wardrobe</h3>
         <h2>User Name</h2>
     </div>
-    <div wardrobe-right-panel>
+    <div app-wardrobe-right-panel>
         <mat-card>
             <mat-card-content>
                 <h4>Search criteria</h4>
@@ -14,7 +14,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
             </mat-card-content>
         </mat-card>
     </div>
-    <div wardrobe-main-content>
+    <div app-wardrobe-main-content>
         <mat-card>
             <mat-card-content>
                 <h4>My outfits</h4>
