--- a/frontend/src/app/shared/components/main-toolbar/main-toolbar.component.html
+++ b/frontend/src/app/shared/components/main-toolbar/main-toolbar.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar color="primary">
-    <button mat-icon-button class="wardrobe-app-icon-button" aria-label="Wardrobe app icon-button with menu icon">
+    <button mat-icon-button class="wardrobe-app-icon-button" routerLink="/"
+        aria-label="Wardrobe app icon-button with menu icon">
         <img src="https://wardrobe-public.s3.eu-west-2.amazonaws.com/static-assets/wardrobe-logo.png"
             alt="Wardrobe app icon" class="wardrobe-app-logo">
     </button>
