--- a/frontend/src/app/views/wardrobe/wardrobe-view-layout/wardrobe-view-layout.component.html
+++ b/frontend/src/app/views/wardrobe/wardrobe-view-layout/wardrobe-view-layout.component.html
@@ -1,5 +1,5 @@
 <mat-drawer-container class="wardrobe-container" [hasBackdrop]="false">
-    <mat-drawer class="drawer-sidenav mat-elevation-z2" mode="side" [disableClose]="true" opened>
+    <mat-drawer class="drawer-sidenav mat-elevation-z2" mode="side" [disableClose]="true">
         <div class="drawer-sidenav-inner">
             <ng-content select="[app-wardrobe-sidenav]"></ng-content>
         </div>
