--- a/frontend/src/app/views/wardrobe/wardrobe-view-layout/wardrobe-view-layout.component.scss
+++ b/frontend/src/app/views/wardrobe/wardrobe-view-layout/wardrobe-view-layout.component.scss
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: row;
     flex: 1;
+
+    overflow-y: visible;
 }
 
 .wardrobe-hero-image-container {
@@ -24,6 +26,16 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: flex-start;
+
+    &.is-stacked {
+        flex-direction: column;
+
+        .wardrobe-hero-image-container {
+            width: 100%;
+            max-height: 20vh;
+            overflow: hidden;
+        }
+    }
 }
 
 .wardrobe-right-panel {
@@ -45,6 +57,15 @@
 
 .mat-drawer-container {
     flex: 1;
+    overflow-y: visible;
+
+    .mat-drawer-content {
+        overflow-y: visible;
+    }
+}
+
+.drawer-content-inner {
+    overflow-y: hidden;
 }
 
 .drawer-sidenav {
