--- a/frontend/src/app/views/wardrobe/wardrobe.component.html
+++ b/frontend/src/app/views/wardrobe/wardrobe.component.html
@@ -30,3 +30,5 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
         </mat-card>
     </div>
 </app-wardrobe-view-layout>
+
+<router-outlet #routerOutlet></router-outlet>
