improve ux of clothing item modal

--- a/frontend/src/app/views/clothing-item/clothing-item.component.html
+++ b/frontend/src/app/views/clothing-item/clothing-item.component.html
@@ -1,3 +1,1 @@
-<p>{{ itemId }}</p>
-<pre>{{ item | json }}</pre>
-<p>clothing-item works!</p>
+<app-clothing-item-card [clothingItem]="item"></app-clothing-item-card>
