--- a/frontend/src/app/shared/components/clothing-item-card/clothing-item-card.component.scss
+++ b/frontend/src/app/shared/components/clothing-item-card/clothing-item-card.component.scss
@@ -4,7 +4,19 @@
 $clothing-item-card-background-color: whitesmoke;
 $clothing-item-card-text-color: black;
 
-.clothing-item-card {
+:host.clickable .clothing-item-card-inner {
+    cursor: pointer;
+
+    transition: box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out, transform 0.2s ease-in-out;
+
+    &:hover {
+        background-color: lighten($clothing-item-card-background-color, 20%);
+        transform: scale(1.01);
+        @extend .mat-elevation-z10;
+    }
+}
+
+.clothing-item-card-inner {
     max-width: 100%;
     max-height: 100%;
 
@@ -21,16 +33,5 @@ $clothing-item-card-text-color: black;
 
     ::ng-deep .mat-mdc-card-content {
         overflow-y: auto;
-    }
-
-    &.clickable {
-        cursor: pointer;
-
-        transition: box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
-
-        &:hover {
-            background-color: lighten($clothing-item-card-background-color, 20%);
-            @extend .mat-elevation-z10;
-        }
     }
 }
