add route guards, resolvers, and user info retrieval to wardbrobe view

--- a/frontend/src/app/shared/components/clothing-item-card/clothing-item-card.component.scss
+++ b/frontend/src/app/shared/components/clothing-item-card/clothing-item-card.component.scss
@@ -42,3 +42,10 @@ $clothing-item-card-text-color: black;
         overflow-y: auto;
     }
 }
+
+@media (prefers-color-scheme: light) {
+    .clothing-item-card-inner {
+        background-color: white;
+        color: $clothing-item-card-text-color;
+    }
+}
