--- a/frontend/src/app/views/wardrobe/wardrobe-view-layout/wardrobe-view-layout.component.scss
+++ b/frontend/src/app/views/wardrobe/wardrobe-view-layout/wardrobe-view-layout.component.scss
@@ -16,6 +16,10 @@
         object-fit: contain;
     }
 
+    img.wardrobe-hero-image {
+        user-select: none;
+    }
+
     transform: translateY(16px);
 }
 
