--- a/frontend/src/app/views/wardrobe/wardrobe.component.html
+++ b/frontend/src/app/views/wardrobe/wardrobe.component.html
@@ -1,7 +1,7 @@
 <app-wardrobe-view-layout>
     <div app-wardrobe-sidenav>
-        <h3>My Wardrobe</h3>
-        <h2>User Name</h2>
+        <h3 class="my-wardrobe-title-text">My Wardrobe</h3>
+        <h2>{{ currentUser.name }}</h2>
     </div>
     <div app-wardrobe-right-panel>
         <mat-card>
