--- a/frontend/src/app/shared/modals/clothing-item-modal/clothing-item-modal.component.html
+++ b/frontend/src/app/shared/modals/clothing-item-modal/clothing-item-modal.component.html
@@ -1,2 +1,7 @@
 <button mat-icon-button class="close-button" (click)="dialogRef.close()"><mat-icon>close</mat-icon></button>
-<app-clothing-item [item]="data.item"></app-clothing-item>
+<app-clothing-item-card *ngIf="data.item" [clothingItem]="data.item">
+    <div app-clothing-item-card-actions>
+        <button mat-button color="primary" (click)="onEditClicked()">Edit</button>
+        <button mat-button color="warn" (click)="onDeleteClicked()">Delete</button>
+    </div>
+</app-clothing-item-card>
